--- a/css/page-dist.css
+++ b/css/page-dist.css
@@ -466,6 +466,10 @@ div.main-right-bottom {
   opacity: 0.8;
 }
 
+.place-item-1 {
+  margin-bottom: 77px;
+}
+
 .goods-eq-title {
   display: flex;
   align-items: center;
@@ -475,6 +479,22 @@ div.main-right-bottom {
   font-size: 20px;
   font-weight: 600;
   padding-left: 30px;
+}
+
+.eq-form-box {
+  padding: 0;
+  max-width: 441px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.eq-form-box-2 {
+  margin-top: 50px;
+  margin-bottom: 77px;
+}
+
+.eq-form-box-1 {
+  margin-bottom: 99px;
 }
 
 @media screen and (max-width: 1315px) {
