--- a/css/page.css
+++ b/css/page.css
@@ -99,6 +99,7 @@ body{
 .black-btn{
     background-color: #000000;
     display: inline-block;
+    text-decoration: underline;
 }
 .black-btn:hover{
     text-decoration: none;
@@ -108,6 +109,9 @@ body{
     display: flex;
     justify-content: center;
     position: relative;
+}
+.bar-forma-title{
+    margin-bottom: 56px;
 }
 .left-photos{
     flex-basis: 562px;
@@ -432,7 +436,8 @@ div.goods__list{
 .forma-title{
     text-align: center;
     max-width: 500px;
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
 }
 .forma-title h2{
     color: #000000;
@@ -449,9 +454,13 @@ div.goods__list{
     padding: 15px 20px;
 }
 .evenform , .form-box{
-    margin: 0 auto;
+    margin-left: auto;
+    margin-right: auto;
     max-width: 717px;
 }
+form.bar-form{
+    margin-bottom: 80px;
+  }
 .evenform input{
     display: block;
     border-top: none;
