--- a/css/page-dist.css
+++ b/css/page-dist.css
@@ -115,7 +115,7 @@ body {
 }
 .use-materials-title {
   text-align: center;
-  margin-top: 100px;
+  margin-top: 23px;
   margin-bottom: 0;
   font-size: 30px;
 }
@@ -170,10 +170,16 @@ body {
   text-align: right;
   max-width: 755px;
   margin-right: 45px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
 }
 .storage-item-3 {
   text-align: center;
   max-width: 755px;
+}
+.storage-description{
+  max-width: 495px;
 }
 .storage-description-3 {
   max-width: 100%;
@@ -497,7 +503,11 @@ div.main-right-bottom {
 .eq-form-box-1 {
   margin-bottom: 99px;
 }
-
+.use-materials-item-description,
+.bar-edge-description{
+  padding-left: 10px;
+  padding-right: 10px;
+}
 @media screen and (max-width: 1790px) {
   .main-left {
     display: flex;
@@ -630,6 +640,9 @@ div.main-right-bottom {
   }
 }
 @media screen and (max-width: 991px) {
+  .use-materials-title {
+    margin-top: 100px;
+}
   .storage-3 {
     margin-bottom: 14px;
 }
@@ -795,6 +808,11 @@ div.main-right-bottom {
 
   .storage-img-1 {
     display: flex;
+  }
+}
+@media screen and (max-width: 750px){
+  form.bar-form{
+    margin-bottom: 0;
   }
 }
 @media screen and (max-width: 743px) {
