--- a/css/page.css
+++ b/css/page.css
@@ -2355,7 +2355,7 @@ div.mainp-text-grid{
         border-radius: 18px;
     }
     .form-box {
-        margin-bottom: 0;
+        margin-bottom: 40px;
     }
     .example_2 {
         margin-bottom: 50px;
